# cushy-storage

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  README_en.md  README_zh.md  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: check.yml  python-publish.yml
cushy_storage/: __init__.py  _core.py  base.py  logger.py  orm.py  utils.py
cushy_storage/utils/: __init__.py  logger.py
docs/: CNAME  README.md  _coverpage.md  _navbar.md  _sidebar.md  async.md  base-dict.md  compare.md  cushy-dict.md  cushy-orm-cache.md  disk-cache.md  faq.md  index.html  plan.md  qa.md  quickstart.md  update.md
docs/en/: README.md
example/: base_dict.py  cushy_dict.py  cushy_dict_save_custom_obj.py  decorator.py  orm_remove_duplicates.py  orm_usage.py
tests/: test_base_dict.py  test_cushy_dict.py  test_dict_cache.py  test_orm.py  utils.py
