[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["Zeeland <zeeland4work@gmail.com>"]
description = "A data local persistence ORM framework."
name = "cushy-storage"
readme = "README.md"
repository = "https://github.com/Undertone0809/cushy-storage"
version = "1.3.3"
keywords = [
    "storage",
    "ORM",
    "serialization",
    "json",
    "cushy-storage",
    "cushy_storage",
]

[tool.poetry.dependencies]
python = "^3.8"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
coverage = "^6.1.2"
coverage-badge = "^1.1.0"
pre-commit = "^3.5.0"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-html = "^3.1.1"
ruff = "^0.1.4"

[[tool.poetry.source]]
name = "tsinghua"
priority = "default"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[tool.ruff]
# https://beta.ruff.rs/docs/settings/
# https://docs.astral.sh/ruff/configuration/
line-length = 88

# https://beta.ruff.rs/docs/rules/
extend-select = ["I"]
ignore = ["F401"]
select = ["E", "W", "F", "I"]

# Exclude a variety of commonly ignored directories.
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
]
ignore-init-module-imports = true
respect-gitignore = true

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.coverage.run]
source = ["tests"]

[coverage.report]
fail_under = 50
show_missing = true
